# modern-gpt2

./: .gitignore  README.md  pyproject.toml
configs/: cpt_2048_small.yaml  cpt_4096_small.yaml  sft_2048_small.yaml  train_gpt2_small.yaml
scripts/: cosmopedia_prep.py  generate.py  openhermes_prep.py  train.py
src/data/: dataloader.py  dataset.py
src/models/: components.py  gpt.py
src/training/: trainer.py
src/utils/: metrics.py
